--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "config": {
     "jwtSecret": "100fedegosinha",
-    "emailSuporte": "laemmerich@hotmail.com"
+    "emailSuporte": "laemmerich@hotmail.com",
+    "dsvUrl": "http://localhost:3333/"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
