--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-node_modules
+/node_modules
 
 
 #ignore images
 /src/public/propriedades/*
+
+#ignore db, every pull run migrations.
+/src/database/db.sqlite
