Refatora controller do chat + errorHandling global.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js",
-    "build": "node src/index.js"
+    "dev": "nodemon src/index.js development",
+    "prod": "node src/index.js production"
   },
   "keywords": [],
   "author": "",
